--- a/tech_doc.html
+++ b/tech_doc.html
@@ -14,11 +14,25 @@
         <section class="main-section" id="Introduction_to_Python"></section>
         <header>
             <h3>Introduction to Python</h3>
+            <p>
+                Python is simple to use, but it is a real programming language, offering much more structure and support for large programs than shell scripts or batch files can offer. On the other hand, Python also offers much more error checking than C, and, being a very-high-level language, it has high-level data types built in, such as flexible arrays and dictionaries. Because of its more general data types Python is applicable to a much larger problem domain than Awk or even Perl, yet many things are at least as easy in Python as in those languages.</p>
+
+<p>Python allows you to split your program into modules that can be reused in other Python programs. It comes with a large collection of standard modules that you can use as the basis of your programs — or as examples to start learning to program in Python. Some of these modules provide things like file I/O, system calls, sockets, and even interfaces to graphical user interface toolkits like Tk.</p>
+
+<p>Python is an interpreted language, which can save you considerable time during program development because no compilation and linking is necessary. The interpreter can be used interactively, which makes it easy to experiment with features of the language, to write throw-away programs, or to test functions during bottom-up program development. It is also a handy desk calculator.
+            </p>
+
+            <p>By the way, the language is named after the BBC show “Monty Python’s Flying Circus” and has nothing to do with reptiles. Making references to Monty Python skits in documentation is not only allowed, it is encouraged!</p>
         </header>
 
         <section class="main-section" id="Hello_World!">
             <header>
                 <h3>Hello World!</h3>
+                <p>To see what can be done with Python, or any programming language for that matter, printing out the words "Hello World!" is a tradition for most programmers venturing to new languages. Fortunately Python allows this to be done quickly. See the below code.</p>
+                <code>>>> print("Hello World!")
+                    <br>Hello World!<br>>>>
+                </code>
+                <p>It is assumed the reader of this documentation has the latest version of Python installed and ready to go.</p>
             </header>
         </section>
 
